Fix scrollbars on windows

--- a/www/sass/main.sass
+++ b/www/sass/main.sass
@@ -11,7 +11,7 @@
   // can't figure out a better way.
   left: 48px
   width: calc(100% - 48px)
-  overflow: scroll
+  overflow: auto
   padding: 5%
 
   // Animation
